# openai-rustface

./: Cargo.toml  README.md
src/: lib.rs
src/openai/: mod.rs  openai_api_interface.rs  openai_endpoints.rs
src/tests/: mod.rs  test_generate_embeddings.rs
