[package]
name = "openai-rustface"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.22"
mockito = "1.6.1"
tokio = { version = "1", features = ["full"] }

